# SPINNMF

./: README.md  pyproject.toml
.github/workflows/: ci.yml
heart_meta_analysis/: analyze_heart_runs.py  regenerate_spatial_with_titles.py
heart_meta_analysis/results/: summary.txt  top_boundary_edges_agg.csv  top_domain_population.csv
spinnmf/src/spinnmf/: __init__.py
