[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "spinnmf"
version = "0.1.0"
description = "SPINNMF: Stable Spatial Pattern Discovery via AutoK Consensus Graph-Regularized Poisson NMF"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Caicai Zhang"},
  {name = "Frank Qingyun Wang"}
]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
  "scikit-learn>=1.2",
  "pandas>=1.5",
  "anndata>=0.9",
  "scanpy>=1.9",
  "joblib>=1.3",
  "tqdm>=4.66",
  "matplotlib>=3.7"
]

[project.scripts]
spinnmf = "spinnmf.cli:main"
